kubernetes/projects/sprawdzaniekierowcow/fluxcd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sprawdzaniekierowcow
